k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comp-value-service-ingress
  namespace: comp-value
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: compvalue.local
      http:
        paths:
          - path: /dart
            pathType: Prefix
            backend:
              service:
                name: comp-value-service
                port:
                  number: 80
